welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:6: error: value update is not a member of plm.universe.Direction
  while (!((getDirection() = Direction.EST)&&estFaceMur())) {
            ^DwarfCode:6: error: not found: value Direction
  while (!((getDirection() = Direction.EST)&&estFaceMur())) {
                             ^